fix(lg3d-core): route key input to SwingNode
SwingNodeRenderer forwarded KeyEvent3D via target.dispatchEvent, but the
offscreen SwingNodeJFrame is displayable yet never shown, so AWT installs
no focus owner: getFocusOwner() stayed null, keys fell back to the content
pane, and a KeyEvent dispatched to a component in an unfocused window is
dropped before reaching the WHEN_FOCUSED input map. Typing into a flipped
sticky note (or any SwingNode text field) did nothing. The 2006 build got
focus from the now-excluded lg3d-awt peer toolkit (setGlobalFocusOwner),
which JDK 21 strong encapsulation blocks.

Emulate click-to-focus instead: remember the deepest Swing component under
a mouse press and deliver keystrokes through
KeyboardFocusManager.redispatchEvent(target, evt), which hands the event
straight to that component. Verified on a hidden-frame probe on JDK 21 with
no reflection and no --add-opens.